add people page

--- a/templates/movie.html
+++ b/templates/movie.html
@@ -16,6 +16,14 @@
     <td>{{data.name}}</td>
   </tr>
   <tr>
+    <td>Director</td>
+    <td><a href="/people?id={{data.director_id}}">{{data.director}}</a></td>
+  </tr>
+  <tr>
+    <td>Stars</td>
+    <td><a href="/people?id={{data.stars_id}}">{{data.stars}}</a></td>
+  </tr>
+  <tr>
     <td>Duration</td>
     <td>{{data.year}}</td>
   </tr>
