--- a/templates/seefavor.html
+++ b/templates/seefavor.html
@@ -6,19 +6,19 @@
     }
   </style>
 
-
+    <link href="static/seefavor.css" rel="stylesheet" media="screen">
 <body>
- <h1>{{username}}'s favorites</h1>
+ <h1 style="text-align:center;">{{username}}'s favorites</h1>
  
 
-<table border="1">
+<table border="1" id="customers">
   <tr>
     <th>Name</th>
     <th>Year</th>
   </tr>
   {% for n in data %}
   <tr>
-    <td><a href="/movie?id={{n.id}}">{{n.name}}</a></td>
+    <td><a style="color:#000000" href="/movie?id={{n.id}}">{{n.name}}</a></td>
     <td>{{n.year}}</td>
   </tr>
   {% endfor %}
