--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,9 @@
     <link href="static/style.css" rel="stylesheet" media="screen">
   </head>
   <body>
+      <a href="/" style="">
+  <img src="static/back.png" style="max-width:80px; width:expression_r(this.width > 80 ? "80px" : this.width); height:auto;">
+</a>
     <div class="container">
       <form action="/login" method="post">
           <div class="login">
