--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,6 +5,9 @@
     <link href="static/signup.css" rel="stylesheet" media="screen">
   </head>
   <body>
+      <a href="/" style="">
+  <img src="static/back.png" style="max-width:80px; width:expression_r(this.width > 80 ? "80px" : this.width); height:auto;">
+</a>
     <div class="container">          
       <div class="login">
           <div class="login-screen">
