replace home button

--- a/templates/movie.html
+++ b/templates/movie.html
@@ -63,7 +63,7 @@ function time()
   <link href="static/movie.css" rel="stylesheet" media="screen">
 <body>
 <a href="/" style="">
-  <img src="static/back.png" style="max-width:80px; width:expression_r(this.width > 80 ? "80px" : this.width); height:auto;">
+  <img src="static/home.png" style="max-width:80px; width:expression_r(this.width > 80 ? "80px" : this.width); height:auto;">
 </a>
 <br></br>
 <img class='poster' src={{ url_for('static', filename = 'movie_pic/m' + data.id + '.jpg') }} >
