--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,7 +6,7 @@
   </head>
   <body>
       <a href="/" style="">
-  <img src="static/back.png" style="max-width:80px; width:expression_r(this.width > 80 ? "80px" : this.width); height:auto;">
+  <img src="static/home.png" style="max-width:80px; width:expression_r(this.width > 80 ? "80px" : this.width); height:auto;">
 </a>
     <div class="container">          
       <div class="login">
