--- a/templates/people.html
+++ b/templates/people.html
@@ -9,7 +9,7 @@
 
 <body>
   <a href="/" style="">
-  <img src="static/back.png" style="max-width:80px; width:expression_r(this.width > 80 ? "80px" : this.width); height:auto;">
+  <img src="static/home.png" style="max-width:80px; width:expression_r(this.width > 80 ? "80px" : this.width); height:auto;">
 </a>
 <br></br>
 <img class='poster' src={{ url_for('static', filename = 'ppic/'+data.profile_pic) }} >
