--- a/templates/seefavor.html
+++ b/templates/seefavor.html
@@ -9,7 +9,7 @@
     <link href="static/seefavor.css" rel="stylesheet" media="screen">
 <body>
         <a href="/" style="">
-  <img src="static/back.png" style="max-width:80px; width:expression_r(this.width > 80 ? "80px" : this.width); height:auto;">
+  <img src="static/home.png" style="max-width:80px; width:expression_r(this.width > 80 ? "80px" : this.width); height:auto;">
 </a>
  <h1 style="text-align:center;">{{username}}'s favorites</h1>
  
